# local-forex

./: .gitignore  LICENSE  README.md  backfill.py  daily_run.py  import.py  pyproject.toml  rates.json  requirements.txt  tests.py
local_forex/: __init__.py  local_forex.py  rate_data.json
