[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local_forex"
version = "0.1.6"
authors = [
  { name="porkyc" },
]
description = "A package for maintaining and interacting with a local forex database."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/porkyc/local-forex"

[tool.setuptools.package-data]
local_forex = ["*.json"]
